--- a/build.properties
+++ b/build.properties
@@ -20,5 +20,7 @@ jslint.jar = ${tools.dir}/jslint4java/jslint4java-1.4.6.jar
 product.name = giga
 version.number = 0.0.1
 
-dist.giga.name = ${product.name}.patient.js
-dist.giga.min.name = ${product.name}.patient.min.js
+project.name = test/Site
+
+dist.name = ${project.name}.js
+dist.min.name = ${project.name}.min.js
