--- a/build.xml
+++ b/build.xml
@@ -28,23 +28,23 @@
 
 
 <target name="stripLogGiga" description="Strip log / console.log lines">
-    <echo>Commenting out log / console.log lines from ${build.dir}/${dist.giga.name}</echo>
+    <echo>Commenting out log / console.log lines from ${build.dir}/${dist.name}</echo>
 
     <replaceregexp match="(\bwindow\.console\b.log\s*\(.*\)[;]*)" replace="" flags="g" >
         <fileset dir="${build.dir}">
-            <include name="**/${dist.giga.name}"/>
+            <include name="**/${dist.name}"/>
         </fileset>
     </replaceregexp>
 
     <replaceregexp match="(\bconsole\b.log\s*\(.*\)[;]*)" replace="" flags="g" >
         <fileset dir="${build.dir}">
-            <include name="**/${dist.giga.name}"/>
+            <include name="**/${dist.name}"/>
         </fileset>
     </replaceregexp>
 
     <replaceregexp match="((?&lt;!\.)\blog\b\s*\(.*\)[;]*)" replace="" flags="g" >
         <fileset dir="${build.dir}">
-            <include name="**/${dist.giga.name}"/>
+            <include name="**/${dist.name}"/>
         </fileset>
     </replaceregexp>
 </target>
@@ -89,17 +89,17 @@
 
 
     <target name="lintGiga">
-        <echo message="JSLinting ${dist.giga.name}..."/>
+        <echo message="JSLinting ${dist.name}..."/>
 
         <apply executable="java">
             <filelist dir="${dist.dir}">
-                <file name="${dist.giga.min.name}"/>
+                <file name="${dist.name}"/>
             </filelist>
             <arg line="-jar"/>
             <arg path="${jslint.jar}"/>
         </apply>
 
-        <echo message="JSLinted ${dist.giga.name}."/>
+        <echo message="JSLinted ${dist.name}."/>
     </target>
 
 
@@ -108,18 +108,18 @@
 
 
     <target name="minifyGiga">
-        <echo message="Building ${dist.giga.min.name}..." />
+        <echo message="Building ${dist.min.name}..." />
 
-        <jscomp compilationLevel="simple" debug="false" output="${build.dir}/${dist.giga.min.name}">
+        <jscomp compilationLevel="simple" debug="false" output="${build.dir}/${dist.min.name}">
             <externs dir="${dev.dir}">
                 <file name="externs.js"/>
             </externs>
             <sources dir="${build.dir}">
-                <file name="${dist.giga.name}"/>
+                <file name="${dist.name}"/>
             </sources>
         </jscomp>
 
-        <echo message="${dist.giga.min.name} built." />
+        <echo message="${dist.min.name} built." />
     </target>
 
 
@@ -138,7 +138,7 @@
 
     <taskdef name="jsdoctoolkit" classname="uk.co.darrenhurley.ant.tasks.JsDocToolkit" classpath="${jsdoc-toolkit.dir}/jsdoc-toolkit-ant-task-1.1.2.jar;${jsdoc-toolkit.dir}/java/classes/js.jar" />
 
-    <jsdoctoolkit jsdochome="${jsdoc-toolkit.dir}/" template="xxx" inputdir="${src.dir}" outputdir="${docs.dir}" includeundocumented="true">
+    <jsdoctoolkit jsdochome="${jsdoc-toolkit.dir}/" template="xxx" inputdir="${src.dir}/lib/giga" outputdir="${docs.dir}" includeundocumented="true">
     </jsdoctoolkit>
 
     
@@ -167,7 +167,7 @@
         <delete includeEmptyDirs="true">
             <fileset dir="${build.dir}" defaultexcludes="no" 
                 includes="**/*"
-                excludes="${dist.giga.name} ${dist.giga.min.name} deflux.giga.all.css">
+                excludes="${dist.name} ${dist.min.name} deflux.giga.all.css">
             </fileset>              
         </delete>
     </target>  
@@ -183,7 +183,7 @@
 
 
 <!--  -->
-    <target name="buildGiga" depends="stripLogGiga, minifyGiga, lintGiga">
+    <target name="buildGiga" depends="stripLogGiga, lintGiga, minifyGiga">
         <echo message="Build Giga Complete." />
     </target>
 
