build module / demo site

--- a/build.properties
+++ b/build.properties
@@ -20,7 +20,12 @@ jslint.jar = ${tools.dir}/jslint4java/jslint4java-1.4.6.jar
 product.name = giga
 version.number = 0.0.1
 
-project.name = test/Site
+module.dir = lib/giga/
+module.name = Giga
+dist.module.name = ${module.name}.js
+dist.module.min.name = ${module.name}.min.js
 
-dist.name = ${project.name}.js
-dist.min.name = ${project.name}.min.js
+site.dir = test/
+site.name = Site
+dist.site.name = ${site.name}.js
+dist.site.min.name = ${site.name}.min.js
