preloadjs; restructure: minimize symlinks, environment supports debug

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 dev.dir = ./
-src.dir = ${dev.dir}/src/js
-css.dir = ${dev.dir}/src/css
+src.dir = ${dev.dir}/js/src/
+css.dir = ${dev.dir}/css
+demo.dir = ${dev.dir}/demo
 
 build.dir = ${dev.dir}/build
 dist.dir = ./
