site preloading w/ animation; content img preloading

--- a/build.properties
+++ b/build.properties
@@ -30,3 +30,5 @@ site.dir = test/
 site.name = Site
 dist.site.name = ${site.name}.js
 dist.site.min.name = ${site.name}.min.js
+dist.preloader.name = PreloadView.js
+dist.preloader.min.name = PreloadView.min.js
